app/frontend/entrypoints/compendium.scss
@import "@/breakpoints";
@import "@/colors";
@import "@/dark";

body.compendium.show {
  .sidebar {
    position: sticky;
    top: 40px;
    bottom: 40px;

    @include medium {
      position: static;
      margin-bottom: -24px;
    }

    > input {
      display: none;
    }

    h3 {
      margin: 8px 0 24px;
      color: var(--color-panasonic);
      display: flex;

      @include dark {
        color: var(--color-platinum);
      }

      @include medium {
        margin-top: 0;
      }
    }

    .sidebar-menu-toggle-label {
      display: none;
      flex: none;
      align-items: center;
      justify-content: center;
      padding: 4px;
      margin: -7px 0 -4px -8px;
      cursor: pointer;

      @include medium {
        display: flex;
      }

      svg {
        width: 24px;
        height: 24px;

        &.close {
          display: none;
        }
      }
    }

    .sidebar-menu-toggle:checked ~ h3 .sidebar-menu-toggle-label {
      svg.close {
        display: block;
      }

      svg.open {
        display: none;
      }
    }

    > ul {
      @include medium {
        display: none;
        margin-bottom: 64px !important;
      }
    }

    .sidebar-menu-toggle:checked ~ ul {
      display: block;
    }

    ul {
      margin: 4px 0 0;
      padding: 0;
      list-style: none;

      li {
        margin: 0;
        padding: 0;
        line-height: 1.3;
        position: relative;

        &.separator {
          height: 16px;
          display: flex;
          padding: 0;
        }

        a {
          flex: auto;
          display: block;
          padding: 6px 48px 6px 0;
          font-weight: 500;

          &.current {
            color: var(--color-black);
            cursor: default;
            pointer-events: none;
            font-weight: 700;

            @include dark {
              color: var(--color-white);
            }
          }
        }

        input {
          display: none;
        }

        label {
          display: flex;
          width: 32px;
          height: 32px;
          color: var(--color-indigo);
          cursor: pointer;
          position: absolute;
          right: 0;
          top: 0;
          align-items: center;
          justify-content: center;

          @include dark {
            color: var(--color-spice);
          }

          &:hover {
            color: var(--color-indigo-light);

            @include dark {
              color: var(--color-spice-light);
            }
          }

          svg {
            width: 12px;
            height: 12px;

            &.close {
              display: none;
            }
          }
        }

        .item-container {
          border-radius: 8px;
          display: flex;
          justify-content: stretch;
        }

        input:checked ~ .item-container {
          > label {
            svg {
              &.open {
                display: none;
              }

              &.close {
                display: block;
              }
            }
          }

          > ul {
            display: block;
          }
        }

        ul {
          margin: 2px 0 6px;
          display: none;
          position: relative;

          &::before {
            content: "";
            position: absolute;
            top: 4px;
            left: 0;
            bottom: 4px;
            width: 2px;
            background-color: var(--color-crystal);
          }
        }

        input:checked ~ ul {
          display: block;
        }
      }

      &.indent-2 li {
        a {
          padding-left: 16px;
        }
      }

      &.indent-3 {
        &::before {
          left: 16px;
        }

        li a {
          padding-left: 32px;
        }
      }

      &.indent-4 {
        &::before {
          left: 32px;
        }

        li a {
          padding-left: 48px;
        }
      }
    }
  }

  section.page {
    padding-left: 48px;

    @include medium {
      padding-left: 0;
    }

    h2,
    h3 {
      position: relative;
      margin-left: -24px;
      padding-left: 24px;
      // clear: both;

      > .section-anchor {
        position: absolute;
        left: -12px;
        display: flex;
        padding: 4px;
        visibility: hidden;
        color: $platinum;

        &:hover {
          color: $panasonic;
        }

        @include medium {
          display: none;
        }

        > svg {
          width: 16px;
          height: 16px;
          display: block;
        }
      }

      &:hover > a {
        visibility: visible;
      }
    }

    h2 > .section-anchor {
      top: 1px;
    }

    h3 > .section-anchor {
      top: -1px;
    }

    ul {
      padding-left: 24px;

      li {
        padding-left: 8px;
      }

      li + li {
        margin-top: 8px;
      }
    }

    aside {
      float: right;
      clear: right;
      max-width: 25%;
      margin: -24px 0 36px 48px;

      @include small {
        float: none;
        margin: 24px auto;
        max-width: 80%;
      }

      a:first-child {
        display: block;
      }

      img {
        width: 100%;
      }

      p {
        margin-top: 8px;
        font-size: 14px;
      }
    }
  }

  #link-icon {
    display: none;
  }
}

